--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -43,7 +43,6 @@ body{
   list-style: decimal;
   content: "    ";
   margin-right: 10px;
-  transition: content 0.5s;
   
 }
 
@@ -166,6 +165,9 @@ h4{
   backface-visibility: hidden;
 }
 
+.slideout{
+  transform: translate3d(100%, 0, 0);
+}
 .drawer__header{
   padding: 1em;
 }
@@ -215,7 +217,7 @@ position: relative;
 }
 @media only screen and (min-width: 600px) {
   .drawer {
-    width: calc(50vw + 1px);
+    width: calc(60vw + 1px);
   }
 }
 @media only screen and (min-width: 960px) {
