--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -1,10 +1,4 @@
-@font-face {
-  font-family: 'Favorit Pro';
-  src: url(../fonts/FavoritPro-Regular.woff2);
-  font-weight: normal;
-    font-style: normal;
-    font-display: swap;
-}
+@import url("fonts.css");
 
 body{
   background-color: #F5F5F5;
