--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -159,9 +159,10 @@ h4{
   backface-visibility: hidden;
 }
 
-.slideout{
+.drawer.closed {
   transform: translate3d(100%, 0, 0);
 }
+
 .drawer__header{
   padding: 1em;
 }
