--- a/src/assets/styles/main.css
+++ b/src/assets/styles/main.css
@@ -141,9 +141,6 @@ h4{
   top: 0;
   background: #fff;
   border-left: 1px solid #2a2b2a; 
-
-  /*transform: translate3d(100%, 0, 0);*/
-
   transition: -webkit-transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1);
   transition: transform 1s cubic-bezier(0.645, 0.045, 0.355, 1),
@@ -161,6 +158,10 @@ h4{
 
 .drawer.closed {
   transform: translate3d(100%, 0, 0);
+}
+
+.drawer.opened {
+  transform: none;
 }
 
 .drawer__header{
